Fixed overflow on queueSettings and some api calls

--- a/FrontEnd/styles/forAll.less
+++ b/FrontEnd/styles/forAll.less
@@ -12,7 +12,7 @@ html, body{
 }
 
 main{
-    height: calc(100% - 70px); // height of header
+    height: calc(100% - 90px); // height of header
     width: 100%;
     max-width: 1080px;
     margin-left: auto;
