--- a/FrontEnd/styles/queueSettingsStyle.css
+++ b/FrontEnd/styles/queueSettingsStyle.css
@@ -11,6 +11,7 @@
   margin: 10px 0;
   width: 40%;
   min-width: fit-content;
+  overflow-y: auto;
   border-radius: 10px;
   color: var(--main-color);
   box-shadow: 0px 0px 20px -5px #2a2a2a;
